--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel=" stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>World Clock 🌎</title>
   </head>
-  <body></body>
+  <body>
+    <h1>World Clock 🌎</h1>
+    <footer>
+      This project was coded by Eugenia Brunetti Ehnimb and is
+      <a href="#" target="_blank"> open sourced on Github </a>
+    </footer>
+  </body>
 
   <script src="javascript/app.js"></script>
 </html>
