added the basic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>World Clock 🌎</title>
   </head>
   <body>
-    <h1>World Clock 🌎</h1>
+    <div class="container">
+      <h1>World Clock 🌎</h1>
+
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">Madrid</option>
+        <option value="">Singapore</option>
+        <option value="">Zürich</option>
+      </select>
+      <div class="city">
+        <h2>Los angeles 🇺🇸</h2>
+        <div class="date">September 18th 2023</div>
+        <div class="time">12:41:28 PM</div>
+      </div>
+      <div class="city">
+        <h2>Paris 🇫🇷</h2>
+        <div class="date">September 18th 2023</div>
+        <div class="time">12:41:28 PM</div>
+      </div>
+    </div>
+
     <footer>
       This project was coded by Eugenia Brunetti Ehnimb and is
       <a href="https://github.com/eugesuri/worldclock-shecodes" target="_blank">
