--- a/index.html
+++ b/index.html
@@ -18,22 +18,29 @@
         <option value="">Zürich</option>
       </select>
       <div class="city">
-        <h2>Los angeles 🇺🇸</h2>
-        <div class="date">September 18th 2023</div>
-        <div class="time">12:41:28 PM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">September 18th 2023</div>
+        </div>
+        <div class="time">12:41:28 <small> PM</small></div>
       </div>
       <div class="city">
-        <h2>Paris 🇫🇷</h2>
-        <div class="date">September 18th 2023</div>
-        <div class="time">12:41:28 PM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+
+          <div class="date">September 18th 2023</div>
+        </div>
+        <div class="time">12:41:28 <small> PM </small></div>
       </div>
     </div>
-
+    <br />
+    <br />
     <footer>
-      This project was coded by Eugenia Brunetti Ehnimb and is
+      This project was coded by <em> Eugenia Brunetti Ehnimb</em>
+      and is
       <a href="https://github.com/eugesuri/worldclock-shecodes" target="_blank">
-        open sourced on Github
-      </a>
+        open sourced on Github </a
+      >🌸
     </footer>
   </body>
 
