added functionality for the selector

--- a/index.html
+++ b/index.html
@@ -13,27 +13,30 @@
     <div class="container">
       <h1>World Clock 🌎</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
-        <option value="">London</option>
-        <option value="">Madrid</option>
-        <option value="">Singapore</option>
-        <option value="">Zürich</option>
+        <option value="Europe/London">London🇬🇧</option>
+        <option value="Europe/Madrid">Madrid🇪🇸</option>
+        <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+        <option value="Europe/Zurich">Zürich 🇨🇭</option>
+        <option value="Pacific/Auckland">Auckland 🇳🇿</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris 🇫🇷</h2>
 
-          <div class="date"></div>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <br />
