added the current location

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London🇬🇧</option>
         <option value="Europe/Madrid">Madrid🇪🇸</option>
         <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
-        <option value="Europe/Zurich">Zürich 🇨🇭</option>
+
         <option value="Pacific/Auckland">Auckland 🇳🇿</option>
       </select>
       <div id="cities">
